# TaskList-CosmWasm

./: Cargo.toml  NOTICE  dockerfile
src/: contract.rs
