[package]
name = "todo-list"
version = "0.1.0"
edition = "2018"

[dependencies]
cosmwasm-std = "2.1.0"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.209", default-features = false, features = ["derive"] }
thiserror = "1.0.63"
cosmwasm-schema = "2.1.3"
bincode = "1.3.3"

[dev-dependencies]
cw-multi-test = "2.0.0"

